--- a/eds/styles/tailwind.css
+++ b/eds/styles/tailwind.css
@@ -76,7 +76,7 @@
     }
 
     .default-content-wrapper h1:first-of-type {
-        @apply pt-4 mx-auto xl:max-w-7xl;
+        @apply pt-4 px-2 mx-auto max-w-7xl;
     }
 
     .default-content-wrapper:not(:first-child, :last-child) {
